--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
 <!-- visible content goes here -->
 <h1>DIG 245 Everyone ♥ Math</h1>
 
+<form>
+  <input type ="text" class="username">
+  <button class="submit">Button</button>
+</form>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
