--- a/index.html
+++ b/index.html
@@ -4,17 +4,23 @@
 
 <!-- meta tags, links to css, etc. -->
 <title>DIG 245 Everyone ♥ Math</title>
-
+<!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 <body>
 
+<div class="container">
 <!-- visible content goes here -->
 <h1>DIG 245 Everyone ♥ Math</h1>
 
 <form>
-  <input type ="text" class="username">
-  <button class="submit">Button</button>
+  <input type ="text" class="username form-control">
+  <button type = "submit" class="btn btn-primary submit">Button</button>
+
 </form>
+<div class="output"></div>
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="assets/js/main.js"></script>
 </body>
